--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- public/index.html or root/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,5 +18,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
